<resources>
    <string name="age">Age</string>
    <string name="alpha">0.6</string>
    <string name="app_name">OkyLifeApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">827486817363982</string>
    <string name="forgetPassword">Did you forget your password?</string>
    <string name="gender">Gender</string>
    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="logIn">LogIn</string>
    <string name="logInWith">LogIn with:</string>
    <string name="password">Password</string>
    <string name="ration1">Taza(s)</string>
    <string name="ration2">Cucharada(s)</string>
    <string name="ration3">Unidad(es)</string>
    <string name="ration4">g</string>
    <string name="ration5">ml</string>
    <string name="signUp">SignUp</string>
    <string name="signUpWith">SignUp With:</string>
    <string name="user">User</string>
    <string name="years">Years Old</string>
    <string name="welcome">¡Welcome!</string>
    <string name="signUpGoogle">Sign Up with Google</string>
    <string name="prompt">  Select your Favourite  </string>
    <string name="promptTypePlace">  Que Tipo de Lugar Es?:  </string>
    <string name="promptTypeRation">  Tipo de Racion:  </string>

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
    <style name="SigninFacebookButtonStyle">
        <item name="android:textSize">14dp</item>
        <item name="android:layout_marginTop">29dp</item>
        <item name="android:layout_marginLeft">10dp</item>
        <item name="android:paddingTop">11dp</item>
        <item name="android:paddingRight">15dp</item>
        <item name="android:paddingLeft">15dp</item>
        <item name="android:paddingBottom">11dp</item>
        </style>
    <style name="SigninGooglekButtonStyle">
        <item name="android:layout_marginTop">26dp</item>
        <item name="android:layout_marginLeft">40dp</item>

    </style>
</resources>

