<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="#ffffff">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"/>


    <LinearLayout
            android:textAlignment="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/linearLayout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
        <TextView
                android:layout_width="120dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/signUpWith"
                android:id="@+id/textView3"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:textColor="#000"
                android:textAlignment="center"/>

        <Button
                android:id="@+id/btnSingUp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/signUpGoogle"
                android:background="@drawable/button_default_bg"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" android:onClick="registerWithGoogle"/>

    </LinearLayout>


    <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="or:"
            android:id="@+id/textView4"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_above="@+id/etEmail"
            android:layout_centerHorizontal="true"/>
    <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:padding="10dp"
            android:hint="@string/user"
            android:textColorHint="#bbbbbb"
            android:drawableLeft="@drawable/email"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" android:layout_above="@+id/etPass"/>
    <EditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:padding="10dp"
            android:hint="@string/password"
            android:textColorHint="#bbbbbb"
            android:password="true"
            android:drawableLeft="@drawable/password"
            android:layout_above="@+id/editText"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    <Button
            android:id="@+id/btnSingIn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/signUp"
            style="@style/DefaultButtonText"
            android:background="@drawable/button_default_bg"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" android:onClick="register"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date|datetime"
            android:maxLength="3"
            android:hint="@string/age"
            android:textColorHint="#bbbbbb"
            android:id="@+id/editText"
            android:layout_above="@+id/btnSingIn"
            android:layout_alignRight="@+id/btnSingIn"
            android:layout_alignEnd="@+id/btnSingIn"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"/>
    <TextView android:layout_width="30dp"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:text="@string/years"
              android:id="@+id/textView"
              android:textSize="15dp"
              android:layout_gravity="center_horizontal"
              android:textColor="#000"
              android:textAlignment="center"
              android:layout_toRightOf="@+id/btnSingIn"
              android:layout_alignRight="@+id/etPass"
              android:layout_alignEnd="@+id/etPass"
              android:layout_below="@+id/etPass"
              android:layout_alignBottom="@+id/editText"/>
    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_below="@+id/etPass"
            android:prompt="@string/gender"
            android:layout_toStartOf="@+id/imageView"
            android:layout_alignBottom="@+id/editText"
            android:entries="@array/genderList"
            android:layout_toLeftOf="@+id/imageView"
            android:spinnerMode="dialog"/>


</RelativeLayout>