<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"

                android:background="#ffffff">
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"/>


    <LinearLayout
            android:textAlignment="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/linearLayout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/etUserName"
            android:layout_alignStart="@+id/etUserName">
        <TextView
                android:layout_width="110dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/welcom"
                android:id="@+id/textView3"
                android:textSize="25dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:textColor="#000"
                android:textAlignment="center"/>
        <TextView
                android:layout_width="100dp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/logInWith"
                android:id="@+id/textView5"
                android:textSize="20dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:textColor="#000"
                android:textAlignment="center"/>
    </LinearLayout>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="18sp"
            />

    <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView" android:layout_centerHorizontal="true"/>
    <com.google.android.gms.common.SignUpButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:text="or:"
            android:id="@+id/textView4"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textAlignment="center"
            android:layout_marginBottom="54dp"
            android:layout_alignBottom="@+id/etUserName"
            android:layout_centerHorizontal="true"/>

    <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:padding="10dp"
            android:hint="@string/user"
            android:textColorHint="#bbbbbb"
            android:drawableLeft="@drawable/email"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="114dp"/>
    <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_bg"
            android:padding="10dp"
            android:hint="@string/password"
            android:textColorHint="#bbbbbb"
            android:password="true"
            android:drawableLeft="@drawable/password"
            android:layout_below="@+id/etUserName"
            android:layout_centerHorizontal="true"/>
    <Button
            android:id="@+id/btnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/logIn"
            style="@style/DefaultButtonText"
            android:background="@drawable/button_default_bg"
            android:layout_above="@+id/passwordRestore"
            android:layout_alignLeft="@+id/passwordRestore"
            android:layout_alignStart="@+id/passwordRestore"
            android:onClick="login"/>

    <TextView android:id="@+id/passwordRestore"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/forgetPassword"
              android:gravity="center"
              android:textSize="16dip"
              style="@style/DefaultButtonText"
              android:textColor="#000"
              android:textColorHighlight="#000"
              android:textColorLink="#00F"
              android:singleLine="false"
              android:linksClickable="true"
              android:clickable="true"
              android:textIsSelectable="false"
              android:layout_alignParentBottom="true"
              android:layout_alignRight="@+id/etPassword"
              android:layout_alignEnd="@+id/etPassword"/>
</RelativeLayout>